# vllm-omni

./: .gitignore  .pre-commit-config.yaml  README.md  REPORT.md  compare.py  pyproject.toml  qwen_image_edit_plus_diffusers_debug.patch  realtime_video_prompt_interaction_protocol.md
.buildkite/: test-nightly.yml
.github/workflows/: comfyui-ci.yml  comfyui-validate.yml
apps/ComfyUI-vLLM-Omni/: .gitignore  AGENTS.MD  LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml
apps/ComfyUI-vLLM-Omni/comfyui_vllm_omni/: nodes.py
apps/ComfyUI-vLLM-Omni/comfyui_vllm_omni/utils/: api_client.py  logger.py  models.py  types.py  validators.py
apps/ComfyUI-vLLM-Omni/vllm_omni/: nodes.py
apps/ComfyUI-vLLM-Omni/vllm_omni/utils/: api_client.py  format.py  log.py  logger.py  models.py  types.py  validators.py
apps/ComfyUI-vLLM-Omni/web/: main.js  utils.js
docs/: .nav.yml
docs/features/: comfyui.md  custom_pipeline.md
docs/models/: supported_models.md
docs/serving/: videos_api.md
docs/user_guide/: diffusion_acceleration.md  diffusion_features.md
tests/: conftest.py  utils.py
tests/benchmarks/: test_serve_cli.py
tests/comfyui/: __init__.py  conftest.py  mock_server.py  test_comfyui_integration.py  test_example.py  test_nodes.py
tests/config/: test_diffusion_load_format_plumbing.py
tests/diffusion/: test_attention_compile.py  test_diffusers_adapter.py  test_diffusion_engine_cleanup.py  test_diffusion_model_runner.py  test_diffusion_plugin_hooks.py  test_diffusion_scheduler.py  test_diffusion_step_pipeline.py  test_diffusion_streaming_output.py  test_diffusion_worker.py  test_diffusion_worker_cuda_profiler.py  test_inline_stage_diffusion_client.py  test_multiproc_engine_concurrency.py  test_prompt_update.py  test_stage_diffusion_proc.py  test_worker_wrapper_base.py
vllm_omni/: outputs.py
(+191 files in other folders)
