[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm_omni"
version = "0.0.1"
description = "ComfyUI integration for vLLM-Omni"
authors = [
    { name = "Zeyu Huang", email = "11222265+fhfuih@users.noreply.github.com" },
]
readme = "README.md"
license = "Apache Software License 2.0"
requires-python = ">=3.10"
classifiers = []
dependencies = []


[project.optional-dependencies]
dev = [
    "bump-my-version",
    "mypy",            # linting
    "pre-commit",      # runs linting on commit
    "ruff",            # linting
]

[project.urls]
Repository = "https://github.com/fhfuih/ComfyUI-vLLM-Omni"
BugTracker = "https://github.com/fhfuih/ComfyUI-vLLM-Omni/issues"
Documentation = "https://github.com/fhfuih/ComfyUI-vLLM-Omni/wiki"


[tool.comfy]
PublisherId = "fhfuih"
DisplayName = "vLLM-Omni ComfyUI Integration"
Icon = ""
Tags = []
Repository = "https://github.com/fhfuih/ComfyUI-vLLM-Omni"

includes = []

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm_omni*"]
exclude = ["web*"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["vllm_omni"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102", # exec-builtin
    "S307", # eval-used
    "W293",
    "F",    # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
